force-app/main/default/objects/SPEN_Zone_History__c/SPEN_Zone_History__c.object-meta.xml
<CustomObject>
    <label>Zone History</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zone Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>