force-app/main/default/objects/SPEN_Zone_History__c/fields/SPEN_Date__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>