force-app/main/default/objects/SPEN_Zone_History__c/fields/SPEN_New_Value__c.field-meta.xml
<CustomField>
    <fullName>SPEN_New_Value__c</fullName>
    <label>New Value</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>