force-app/main/default/objects/SPEN_Zone_History__c/fields/SPEN_User__c.field-meta.xml
<CustomField>
    <fullName>SPEN_User__c</fullName>
    <label>User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>