force-app/main/default/objects/SPEN_Zone_History__c/fields/SPEN_Zone__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>SPEN_Zone__c</referenceTo>
    <relationshipLabel>Zone History</relationshipLabel>
    <relationshipName>Zone_History</relationshipName>
    <type>Lookup</type>
</CustomField>